# policyengine-us-data

./: .buildinfo  .codecov.yml  .gitignore  0_check-fork.txt  1_Lint _ lint.txt  2_Smoke test (ubuntu-latest, Python 3.13).txt  2_Test _ test.txt  3_Smoke test (ubuntu-latest, Python 3.13).txt  3_Test _ test.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  MANIFEST.in  Makefile  README.md  REPRODUCTION.md  SSN_statuses_imputation.html  acs.py  appendix.json  auto-loan-interest.ipynb  background.json  calibration.json  changelog.yaml  changelog_entry.yaml  conclusion.json  config.json  conftest.py  cps.py  data.json  discussion.json  genindex.html  household_counts.txt  imputation.html  index.html  index.json  intro.html  introduction.json  l0_optimization.ipynb  l0_optimization_50pct_optuna.ipynb  (+32 more)
.beads/: issues.jsonl
.github/: CONTRIBUTING.md  build_and_publish.Dockerfile  check-changelog-entry.sh  commit-pipeline-diagram-json.sh  fetch_version.py  push.yaml  review_pull_request.py  upload_evaluation.py
.github/build_and_publish/: cloudbuild.yaml
.github/review/: global.md
.github/scripts/: check_python_import.py  delete_modal_environment.py  ensure_modal_environment.py  spawn_modal_pipeline.py  sync_modal_secrets.py  upload_validation_results.py
Lint _ lint/: 1_Set up job.txt  2_Build lgeiger_black-action@master.txt  3_Run actions_checkout@v4.txt  4_Check formatting.txt  8_Post Run actions_checkout@v4.txt  9_Complete job.txt
Smoke test (ubuntu-latest, Python 3.13)/: 11_Post Set up Python 3.13.txt  12_Post Checkout repo.txt  13_Complete job.txt  1_Set up job.txt  2_Checkout repo.txt  3_Set up Python 3.13.txt  4_Install package ONLY (no dev deps).txt  5_Test basic import.txt  6_Test specific core import.txt
Test _ test/: 10_Run tests.txt  1_Set up job.txt  26_Post Checkout repo.txt  27_Complete job.txt  2_Checkout repo.txt  3_Install uv.txt  4_Set up Python.txt  6_Install package.txt  7_Download data inputs.txt  8_Build datasets.txt  9_Save calibration log.txt
appendix/: index.html
background/: index.html
calibration/: index.html
changelog.d/: 563.added  617.fixed  618.added.md  630.fixed.md  701.changed.md  702.fixed  703.fixed  704.fixed  705.fixed  708.added  711.fixed.md  712.fixed  716.fixed  719.added.md  725.added.md  729.added.md  743.added.md  745.changed.md  749.changed.md  753.changed.md  754.fixed.md  763.fixed.md  767.fixed.md  770.changed.md  794.fixed.md  796.added.md  812.changed.md  818.changed.md  825.added.md  826.added.md  831.changed.md  834.fixed.md  acs-2024-donor.changed.md  add-calibration-pipeline-internals-docs.added.md  add-database-build-test.added.md  add-dataset-sanity-tests.added.md  add-puf-documentation-links.added.md  add-state-and-agi-eitc-targets.added.md  add-table-43-targets.added.md  additional-compatible-specifiers.added.md  (+80 more)
check-fork/: 1_Set up job.txt  2_Check if PR is from fork.txt  3_Complete job.txt
conclusion/: index.html
content/: abstract.md  appendix.json  background.json  background.md  conclusion.json  data.json  data.md  discussion.json  discussion.md  index.json  introduction.json  introduction.md  methodology.json  methodology.md  pwbm-ss-comparison-2025-2100.json
data/: index.html
discussion/: index.html
docker/: build_and_publish.Dockerfile  docs.Dockerfile  generate_and_upload.Dockerfile  policyengine_us_data.Dockerfile
docs/: ._config.yml.bak  DATA_PIPELINE.md  Dockerfile  Home.py  README.md  SNAP_SIMULATION_ANALYSIS.md  SSN_statuses_imputation.ipynb  _config.yml  _toc.yml  abstract.md  add_plotly_to_book.py  appendix.md  asec_undocumented_algorithm.ipynb  asec_undocumented_algorithm.md  background.md  build_h5.md  calibration.md  calibration_internals.ipynb  calibration_matrix.ipynb  conclusion.md  data.md  discussion.md  download.py  download_prerequisites.py  hierarchical_uprating.ipynb  imputation.ipynb  intro.md  introduction.md  local_area_calibration_setup.ipynb  long_term_projections.ipynb  methodology.md  myst.yml  overview.md  package-lock.json  package.json  pwbm_ss_comparison_2025_2100.ipynb  references.bib  results.ipynb  results.md  setup.ipynb  (+5 more)
docs/_static/: style.css
elenas_docs/: SECPSvsECPS_metric_comparison.ipynb  l0_grid&greedy_param_optimization.ipynb  test_minimization_approach.ipynb
great_expectations/: great_expectations.yml
introduction/: index.html
local-area-calibration-setup/: index.html
long-term-projections/: index.html
methodology/: index.html
modal_app/: README.md  __init__.py  benchmark_runner.py  data_build.py  fit_weights.py  h5_test_harness.py  images.py  local_area.py  matrix_chunk_worker.py  pipeline.py  remote_calibration_runner.py  resilience.py  worker_script.py
paper/: .gitignore  macros.tex  main.tex  response_to_reviewers.md
paper-l0/: ijm.sty  macros.tex  main.tex
policyengine_us_data/: __init__.py  __version__.py  census_cps.py  irs_puf.py  pipeline_metadata.py  pipeline_schema.py  policyengine_cps.py
public/: abstract-8d67154db9ee7176f0413bdb2f43b193.md  conclusion-ca771e9a2bbc65c1da15ea86c1ee18d2.md  discussion-87f27b5ba100d2227bc129f6d0197528.md  introduction-b5d8b7aaaaf7350b38aad8ebbb213244.md
pwbm-ss-comparison-2025-2100/: index.html
scripts/: debug_snap_draws.py  debug_state_precomp.py  extract_pipeline.py  generate_test_data.py  migrate_versioned_to_production.py  snap_state_loop_pollution.md  upload_calibration.py  verify_county_fix.py  verify_nc_calibration.py  verify_takeup_consistency.py
tests/: conftest.py  test_employer_sponsored_insurance_premiums.py  test_etl_irs_soi_overlay.py  test_geo_stacking_reconciliation.py  test_geo_stacking_targets.py  test_h6_reform.py  test_no_formula_variables_stored.py  test_refresh_local_agi_state_targets.py  test_refresh_soi_table_targets.py  test_reproducibility.py  test_soi_utils.py  test_weeks_unemployed.py
validation/: benchmark_qrf_subsample.py  benefit_validation.py  cps_tax_unit_outcome_validation.py  cps_tax_unit_validation.py  generate_qrf_statistics.py  qrf_diagnostics.py  run_qrf_diagnostics.py  tax_policy_validation.py  validate_retirement_imputation.py
(+854 files in other folders)
